2005-07-19 Anatoly Sokolov <aesok@pautinka.net>

	* Add Anatoly Sokolov to the license file. 

2005-07-19 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/wdt.h : Add support for ATmega165, ATmega325, 
	ATmega3250, ATmega645, ATmega6450.
	[Fixed bug #13678]

2005-07-09 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/io.h [__COMPILING_AVR_LIBC__] (EECR, EEDR, 
	EEAR, EEARL, EEARH, EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/io43u32x.h : Mark SFR [0x1C..0x1F] as reserved.
	* include/avr/io43u35x.h : (Ditto.)
	* include/avr/io1200.h (EECR, EEDR, EEAR, EEARL, 
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/io2313.h (EECR, EEDR, EEAR, EEARL,
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/io2323.h (EECR, EEDR, EEAR, EEARL, 
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/io2333.h (EECR, EEDR, EEAR, EEARL, 
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/io2343.h (EECR, EEDR, EEAR, EEARL, 
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/io4414.h (EECR, EEDR, EEAR, EEARL, 
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/io4433.h (EECR, EEDR, EEAR, EEARL, 
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/io4434.h (EECR, EEDR, EEAR, EEARL, 
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/io8515.h (EECR, EEDR, EEAR, EEARL, EEARH, 
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/io8534.h (EECR, EEDR, EEAR, EEARL, EEARH, 
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/io8535.h (EECR, EEDR, EEAR, EEARL, EEARH, 
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/iocan128.h (EECR, EEDR, EEAR, EEARL, EEARH) : Define.
	* include/avr/iom8.h (EECR, EEDR, EEAR, EEARL, EEARH, 
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/iom16.h (EECR, EEDR, EEAR, EEARL, EEARH, 
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/iom32.h (EECR, EEDR, EEAR, EEARL, EEARH, 
	EERIE, EEMWE, EEWE, EERE) : Define.
	* include/avr/iom64.h (EECR, EEDR, EEAR, EEARL, EEARH, 
	EERIE, EEMWE, EEWE, EERE) : Define.